tests/NormalTests/paczka1/small_fuzzy/73945112.err
Error in line 5: EB9 A276 7,6
Error in line 6: EB9 A613 91,0
Error in line 10: VG2h4 A276 48,5
